[package]
name = "cargo-move"
authors = ["LOL"]
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
abscissa_core = "0.3.0"
failure = "0.1"
gumdrop = "0.6"
lazy_static = "1"
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies.abscissa_core]
version = "0.3.0"
features = ["testing"]

